Small fix for a bug where thumbnails were overflowing their inline-block parent in non-Chrome browsers

--- a/components/images/thumbnail/_thumbnail.scss
+++ b/components/images/thumbnail/_thumbnail.scss
@@ -14,6 +14,7 @@ Style guide: images.thumbnail
   position: relative;
   display: inline-block;
   overflow: hidden;
+  max-width: 100%;
   line-height: 0;
   
   img {
